@@ -2791,8 +2791,7 @@ function(dfile)
     if(!is.na(val)) {
         tmp <- character()
         ## We allow 'R', which is not a valid package name.
-        if(!grepl(sprintf("^(R|%s)$", valid_package_name_regexp), val)
-           && !grepl("^Translation-[[:alnum:].]+$", val))
+        if(!grepl(sprintf("^(R|%s)$", valid_package_name_regexp), val))
             tmp <- c(tmp, gettext("Malformed package name"))
         if(!is_base_package) {
             if(val %in% standard_package_names$base)
